<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/image_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginEnd="@dimen/activity_margin_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="@dimen/poster_width"
            android:layout_height="@dimen/poster_height"
            android:contentDescription="@string/movie_image_text_desc"
            android:scaleType="fitXY"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rating_bg"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/star_icon_text_desc"
                android:paddingStart="4dp"
                android:paddingTop="4dp"
                android:paddingEnd="1dp"
                android:paddingBottom="4dp"
                app:srcCompat="@drawable/star" />

            <TextView
                android:id="@+id/txt_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="1dp"
                android:paddingTop="4dp"
                android:paddingEnd="@dimen/activity_margin_8"
                android:paddingBottom="4dp"
                android:text="@string/template_score_text"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />
        </LinearLayout>


    </FrameLayout>


    <TextView
        android:id="@+id/txt_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/poster_footer_bg"
        android:padding="1dp"
        android:text="@string/template_movie_release_date"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/image_container"
        app:layout_constraintEnd_toEndOf="@+id/image_container"
        app:layout_constraintStart_toStartOf="@+id/image_container" />

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:paddingBottom="@dimen/activity_margin_16"
        android:text="@string/template_movie_title"
        android:textAlignment="center"
        android:textSize="18sp"
        android:gravity="top"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/image_container"
        app:layout_constraintStart_toStartOf="@+id/image_container"
        app:layout_constraintTop_toBottomOf="@id/image_container" />

</androidx.constraintlayout.widget.ConstraintLayout>