<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".reminder.ReminderSettingActivity">
    <TextView
        android:id="@+id/daily_setting_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/daily_reminder_title_text" />
    <TextView
        android:id="@+id/daily_setting_desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_setting_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/daily_setting_switch"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="@dimen/activity_margin_8"
        android:text="@string/daily_reminder_desc_text" />

    <Switch
        android:id="@+id/daily_setting_switch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/daily_setting_title_text"
        app:layout_constraintBottom_toBottomOf="@id/daily_setting_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/activity_margin_8"
        />

    <ImageView
        android:id="@+id/daily_setting_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/grey"
        android:contentDescription="@string/line_separator"
        app:layout_constraintTop_toBottomOf="@id/daily_setting_desc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_margin_8"
        />

    <TextView
        android:id="@+id/release_setting_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/daily_setting_line"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/release_reminder_title_text" />
    <TextView
        android:id="@+id/release_setting_desc_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/release_setting_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/release_setting_switch"
        android:layout_marginStart="@dimen/activity_margin_8"
        android:layout_marginEnd="@dimen/activity_margin_8"
        android:text="@string/release_reminder_desc_text" />
    <Switch
        android:id="@+id/release_setting_switch"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="@id/release_setting_title_text"
        app:layout_constraintBottom_toBottomOf="@id/release_setting_desc_text"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/activity_margin_8"
        />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:src="@color/grey"
        android:contentDescription="@string/line_separator"
        app:layout_constraintTop_toBottomOf="@id/release_setting_desc_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/activity_margin_8"
        />

</androidx.constraintlayout.widget.ConstraintLayout>