<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/favorite_item_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/activity_margin_8"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/favorite_item_image"
        android:layout_width="140dp"
        android:layout_height="200dp"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:contentDescription="@string/movie_image_text_desc"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@id/rating_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/favorite_item_title"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/favorite_item_title"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_16"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:text="@string/template_movie_title"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/favorite_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/favorite_release_date"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:text="@string/template_movie_release_date"
        app:layout_constraintTop_toBottomOf="@id/favorite_item_title"
        app:layout_constraintStart_toEndOf="@id/favorite_item_image"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/rating_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_white"
        android:contentDescription="@string/background_desc"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_16"
        android:layout_marginBottom="@dimen/activity_margin_16"
        app:layout_constraintLeft_toRightOf="@id/favorite_item_image"
        app:layout_constraintTop_toBottomOf="@id/favorite_release_date"
        app:layout_constraintBottom_toBottomOf="parent"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/star_icon_text_desc"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/activity_margin_8"
            android:layout_marginBottom="4dp"
            app:layout_constraintLeft_toRightOf="@id/favorite_item_image"
            app:layout_constraintTop_toBottomOf="@id/favorite_release_date"
            app:srcCompat="@drawable/star"
            />
        <TextView
            android:id="@+id/favorite_item_score_text_view"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/activity_margin_8"
            android:layout_marginEnd="@dimen/activity_margin_8"
            android:layout_marginBottom="4dp"
            android:text="@string/template_score_text"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_white"
        android:contentDescription="@string/background_desc"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_margin_8"
        android:layout_marginStart="@dimen/activity_margin_16"
        app:layout_constraintLeft_toRightOf="@id/rating_container"
        app:layout_constraintTop_toBottomOf="@id/favorite_release_date"
        >
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/star_icon_text_desc"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/activity_margin_8"
            android:layout_marginBottom="4dp"
            app:layout_constraintLeft_toRightOf="@id/favorite_item_image"
            app:layout_constraintTop_toBottomOf="@id/favorite_release_date"
            app:srcCompat="@drawable/time_white_24dp"
            />
        <TextView
            android:id="@+id/favorite_item_duration_text_view"
            android:textColor="@android:color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="@dimen/activity_margin_8"
            android:layout_marginEnd="@dimen/activity_margin_8"
            android:layout_marginBottom="4dp"
            android:text="@string/template_score_text"
            />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>