<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">
        <TextView
            android:id="@+id/film_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_margin_16"
            android:text="@string/detail_film_title"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/favorite_button"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/activity_margin_16"
            android:layout_marginBottom="@dimen/activity_margin_8"
            android:layout_marginTop="@dimen/activity_margin_8"
            android:contentDescription="@string/add_to_favorite_text"
            android:src="@drawable/favorite_border_white_36dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/detail_page_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_detail"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="@dimen/activity_margin_16"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/movie_image_text_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sample_poster" />


            <ImageView
                android:id="@+id/column1"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_margin_8"
                android:layout_marginEnd="@dimen/activity_margin_8"
                android:contentDescription="@string/background_desc"
                app:layout_constraintBottom_toBottomOf="@+id/detail_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/detail_title"
                app:srcCompat="@drawable/rounded_rectangle" />
            <TextView
                android:id="@+id/detail_title"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_8"
                android:layout_marginTop="@dimen/activity_margin_16"
                android:layout_marginEnd="@dimen/activity_margin_8"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:paddingStart="@dimen/activity_margin_16"
                android:paddingEnd="@dimen/activity_margin_16"
                android:text="@string/template_movie_title"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_detail" />


            <LinearLayout
                android:id="@+id/genre_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_margin_16"
                android:layout_marginEnd="@dimen/activity_margin_16"
                android:layout_marginTop="@dimen/activity_margin_8"
                android:layout_marginBottom="@dimen/activity_margin_16"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/column1">
            </LinearLayout>


            <ImageView
                android:id="@+id/column2"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_margin_8"
                android:layout_marginEnd="@dimen/activity_margin_8"
                android:contentDescription="@string/background_desc"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/title_eps_tv"
                app:layout_constraintBottom_toBottomOf="@+id/status_tv"
                app:srcCompat="@drawable/rounded_rectangle" />
            <TextView
                android:id="@+id/title_eps_tv"
                style="@style/TextSpec.Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/episode"
                android:paddingTop="@dimen/activity_margin_8"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/genre_container" />
            <TextView
                android:id="@+id/eps_tv"
                style="@style/TextSpec.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                android:text="@string/template_episode_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_eps_tv" />

            <TextView
                android:id="@+id/title_score_tv"
                style="@style/TextSpec.Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/template_score_title_text"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eps_tv" />
            <TextView
                android:id="@+id/score_tv"
                style="@style/TextSpec.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                android:text="@string/template_score_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_score_tv" />

            <TextView
                android:id="@+id/title_runtime_tv"
                style="@style/TextSpec.Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/template_runtime_title_text"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/score_tv" />
            <TextView
                android:id="@+id/runtime_tv"
                style="@style/TextSpec.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                android:text="@string/template_runtime_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_runtime_tv" />

            <TextView
                android:id="@+id/title_status_tv"
                style="@style/TextSpec.Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/template_status_title_text"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/runtime_tv" />
            <TextView
                android:id="@+id/status_tv"
                style="@style/TextSpec.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                android:paddingBottom="@dimen/activity_margin_8"
                android:text="@string/template_runtime_text"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_status_tv" />

            <ImageView
                android:id="@+id/column3"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/activity_margin_8"
                android:layout_marginEnd="@dimen/activity_margin_8"
                android:contentDescription="@string/background_desc"
                app:layout_constraintBottom_toBottomOf="@+id/desc_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/desc_title"
                app:srcCompat="@drawable/rounded_rectangle" />
            <TextView
                android:id="@+id/desc_title"
                style="@style/TextSpec.Field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/overview_text"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_tv" />
            <TextView
                android:id="@+id/desc_tv"
                style="@style/TextSpec.Value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:paddingStart="@dimen/activity_margin_8"
                android:paddingEnd="@dimen/activity_margin_8"
                android:paddingBottom="@dimen/activity_margin_8"
                android:text="@string/template_movie_desc"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/desc_title" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout_detail_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/activity_detail_placeholder"/>
    </com.facebook.shimmer.ShimmerFrameLayout>
</LinearLayout>